# 2024-unicellular-tracking

./: README.md  pyproject.toml
btrack_config/: cell_config.json
data/: AMID-04_CC-124_pools_file-list.tsv  AMID-04_summary_motility_metrics.csv  AMID-05_CC-124_wells_file-list.tsv  AMID-05_summary_motility_metrics.csv  README.md  experimental_parameters.json
envs/: dev.yml
notebooks/: 1_Compute-Summary-Motility-Metrics.ipynb  1_compute-summary-motility-metrics.ipynb  2_Analyze-Motility-in-Pools.ipynb  2_Motility_Analysis_Pools.ipynb  2_temporal-variation-in-motility-metrics.ipynb  3_Compare-Pools-vs-Wells.ipynb  3_Scale-to-Pools.ipynb  3_motility-analysis-in-pools.ipynb  4_PCA.ipynb  4_Perform-PCA.ipynb  4_compare-motility-in-pools-vs-wells.ipynb  5_pca-of-motility-features.ipynb  Pool_Extraction.ipynb  S1_Quality-Control.ipynb  plotting_pools.py
resources/microscopy_docs/: README.md  Timelapse-Grid-10x-100um-pools.html  Timelapse-Grid-10x-384-well-plate.html
results/: figure-4_regression_stats.csv
src/chlamytracker/: cli_api.py  cli_options.py  pool_finder.py  pool_processor.py  stack_processing.py  stats_testing.py  timelapse.py  tracking.py  tracking_metrics.py  utils.py  well_processor.py
src/chlamytracker/plotting/: plotting_pools.py
src/chlamytracker/scripts/: extract_pools.py  generate_bioimage_archive_file_lists.py  make_movies_of_pools.py  make_movies_of_wells.py  segment_cells_in_pools.py  segment_pools.py  track_cells.py  track_cells_in_pool.py  track_cells_in_pools.py  (+1 more)
src/swimtracker/: stack_processing.py  timelapse.py  tracking.py
(+3 files in other folders)
